--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,25 @@
         <item>@string/settings_order_by_magnitude_value</item>
         <item>@string/settings_order_by_most_recent_value</item>
     </string-array>
+
+    <string-array name="settings_country_labels">
+        <item>@string/settings_country_none_label</item>
+        <item>@string/settings_country_ca_label</item>
+        <item>@string/settings_country_egypt_label</item>
+        <item>@string/settings_country_usa_label</item>
+        <item>@string/settings_country_japan_label</item>
+        <item>@string/settings_country_germany_label</item>
+        <item>@string/settings_country_france_label</item>
+    </string-array>
+
+    <string-array name="settings_country_values">
+        <item>@string/settings_country_none_value</item>
+        <item>@string/settings_country_ca_value</item>
+        <item>@string/settings_country_egypt_value</item>
+        <item>@string/settings_country_usa_value</item>
+        <item>@string/settings_country_japan_value</item>
+        <item>@string/settings_country_germany_value</item>
+        <item>@string/settings_country_france_value</item>
+    </string-array>
+
 </resources>
